--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,65 @@
 *{
-    box-sizing:border-box;
-}
-h1{
     font-family: 'Dongle', sans-serif;
     font-family: 'Nanum Pen Script', cursive;
+    font-family: 'Poor Story', cursive;
+    font-family: 'Song Myung', serif;
 }
-.food{
-    border : 3px solid rgb(0,9,9);
-    width : 700px;
-    text-align : center;
+section{
+    border: 3px solid #222;
+    margin-bottom: 5px;
+    padding: 20px;
+    height: 240px;
 }
-.tools{
-    list-style-image : inherit;
+h1, h3{
+    text-align: center;
+    position: relative;
 }
-.making{
-    background-image: url('../css/images/떡볶이.jpg');
-    background-color : #FFF;
-    width:600px;
-    margin : 20px auto;
-    padding : 10px;
+h2{
+    font-size: xx-large;
+    text-align: center;
+    margin-top: 5px;
+}
+ul{
+    text-align: center;
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+ol{
+    text-align: left;
+    list-style: upper-roman;
+    margin: 0px;
+    padding: 0px;
+    margin-left: 600px;
+    font-size: x-large;
+}
+img{
+    border-radius: 50%;
+    padding: 0px;
+}
+table{
+    background-color: aquamarine;    
+    position: absolute;
+    left: 700px;
+}
+table, th, td{
+    border: 1px solid #ccc;
+    border-collapse: collapse;
+}
+th, td{
+    margin: 50px;
+    padding: 20px;
+}
+#container{
+    width: 1500px;
+    height: 1500px;
+    border: none;
+    margin: 0 auto;
+    padding: 10px 10px;
+}
+#food{
+    text-align: center;
+}
+#title{
+    font-size: x-large;
 }
